--- a/js_2/t2/index.html
+++ b/js_2/t2/index.html
@@ -27,6 +27,10 @@
 
     <h3>1. Створіть окремий файл у папці firebase з конфігурацією вашої бази данних.</h3>
 
+    <h3 align="center">
+        <img src="../t1/images/4.png" alt="" >
+   </h3>
+    
     <xmp>
         // Файл index.js у папці firebase
         const firebaseConfig = {
