--- a/js_2/t6/done/article.html
+++ b/js_2/t6/done/article.html
@@ -9,10 +9,10 @@
      <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-     <div class="container">
-          <h1 class="text-center">Articles</h1>
+     <div class="container" id="article">
+          <h1 class="text-center"></h1>
 
-          <div class="mt-5" id='articles-box'>
+          <div class="mt-5">
               
           </div>
      </div>
@@ -22,6 +22,6 @@
      <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-app.js"></script>
      <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-firestore.js"></script>
      <script src="../../firebase/index.js"></script>
-     <script src="main.js"></script>
+     <script src="article.js"></script>
 </body>
 </html>
