--- a/js_2/t6/index.html
+++ b/js_2/t6/index.html
@@ -52,5 +52,6 @@
     <h3 align="center">
         <img src="2.png" alt="" >
     </h3>
+	<a href="https://github.com/MarikKV/js3t6">hellp</a>
 </body>
 </html>
