--- a/js_2/t6/index.html
+++ b/js_2/t6/index.html
@@ -52,6 +52,27 @@
     <h3 align="center">
         <img src="2.png" alt="" >
     </h3>
+
+    <xmp>
+        <div id="new_comment">
+            <div class="mb-3">
+                <p>Leave a comment as: UserName</p>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Your comment</label>
+                <textarea class="form-control" id="comment" rows="3"></textarea>
+            </div>
+            <div class="d-flex justify-content-end">
+                <button class="btn btn-primary">Save</button>
+            </div>
+        </div>
+
+        <div id="old_comments">
+
+        </div>
+    </xmp>
+
+
 	<a href="https://github.com/MarikKV/js3t6">hellp</a>
 </body>
 </html>
