--- a/html-css/t13/1.html
+++ b/html-css/t13/1.html
@@ -1,9 +1,12 @@
 <html>
     <head>
         <style>
-        #name{font-size:20pt;}
-        body{background:rebeccapurple;
-        color:white;}
+        #name{font-size:16pt;}
+        body{
+            background:rebeccapurple;
+            color:white;
+            padding: 50px 15%;
+        }
         a{text-decoration: none;
         color:white;}
 
