--- a/html-css/t13/2.html
+++ b/html-css/t13/2.html
@@ -2,8 +2,11 @@
     <head>
         <style>
         #name{font-size:40pt;}
-        body{background:rebeccapurple;
-        color:white;}
+        body{
+            background:rebeccapurple;
+            color:white;
+            padding: 50px 15%;
+        }
         a{text-decoration: none;
         color:white;}
 
