--- a/html-css/t13/3.html
+++ b/html-css/t13/3.html
@@ -3,7 +3,7 @@
         <style>
         #name{font-size:40pt;}
         body{background:rebeccapurple;
-        color:white;}
+        color:white;padding: 50px 15%;}
         a{text-decoration: none;
         color:white;}
 
