--- a/html-css/t13/1.html
+++ b/html-css/t13/1.html
@@ -9,7 +9,7 @@
         }
         a{text-decoration: none;
         color:white;}
-
+        html{ scroll-behavior: smooth;}
         </style>
     </head>
     <body>
