--- a/js_2/t8/index.html
+++ b/js_2/t8/index.html
@@ -40,7 +40,8 @@
                  <meta http-equiv="X-UA-Compatible" content="IE=edge">
                  <meta name="viewport" content="width=device-width, initial-scale=1.0">
                  <title>Document</title>
-                 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+                 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+                 integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
             </head>
             <body>
                  <div class="container">
@@ -120,8 +121,16 @@
         <span style="padding-left: 20px;"> 
         1) Підтверджувати замовлення (у полі замовлення submitted зміювати на true).<br></span> 
         <span style="padding-left: 20px;">   
-        2) Генеруватиме посилання нову сторінку яка показуватиме замовнику інформацію про підтверджене замовлення.</span>
+        2) Генеруватиме посилання на нову сторінку яка показуватиме замовнику інформацію про підтверджене замовлення. <br></span>
+        <span style="padding-left: 20px;">   
+        3) Генеруватиме посилання для відправки email замовнику.</span>
+        <br>
+        <xmp>
+            //Приклад посилання:
+            <a href="mailto:test@gmail.com?subject=Order%20submited&body=Test%20body.%0AWith%20many%20text.">link</a>
+        </xmp>
     </h3>
 
+    <h3>6. У клас <b>Order</b> додайте метод <b>render()</b> який буде відображати замовлення для користувача на новій сторінці <b>order.html</b>. </h3>
 </body>
 </html>
