--- a/html-css/t21/1.html
+++ b/html-css/t21/1.html
@@ -11,11 +11,12 @@
 		<a href="1.html" class="button1">Анкета</a>
 		<a href="2.html" class="button2">Результат</a>
 	</header>
-<form action="2.html">
+	<main>
+		<form action="2.html">
 
-	<h1 align="center">Анкета учасника</h1>
-	<br>
-	<label>Введіть ваше ім'я</label>
+			<h1 align="center">Анкета учасника</h1>
+			<br>
+			<label>Введіть ваше ім'я</label>
 		<br><input type="text" required="required">
 		<br>
 		<label>Введіть ваш клас</label>
@@ -31,6 +32,7 @@
 		<br>
 		<input type="checkbox" name="a3">Англійська
 		<br><br><input type="submit" value="Перевірка">
-</form>
+	</form>
+	</main>
 </body>
 </html>
