--- a/html-css/t27/index.html
+++ b/html-css/t27/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="header">
         <div class="header-back">
-            <div class="left">Навколо світу</div>
+            <div class="left">Around the world</div>
 
             <div class="right">
                відкрий для себе світ
