--- a/js_2/t13/index.html
+++ b/js_2/t13/index.html
@@ -132,7 +132,7 @@
         </style>
     </xmp>
 
-    <h3>3. У компоненті створіть метод couuntTotalPrice() який вираховуватиме остаточну вартість покупки. Приклад створення методу з офіційнох документації <a href="">тут</a></h3>
+    <h3>3. У компоненті створіть метод couuntTotalPrice() який вираховуватиме остаточну вартість покупки. Придумайте власні опції у картці та налаштуйте формулу для вираховуваня ціни</h3>
 
     <h3>3. Збережіть верстку темплейту у окремому html-файлі та додайте його як темплейт компоненти за допомого <a href="https://axios-http.com/docs/intro">axios.js</a></h3>
 
