--- a/html-css/t27/index.html
+++ b/html-css/t27/index.html
@@ -70,7 +70,7 @@
             </div>
             
             <div class="lists">
-                <h2>Контенени</h2>
+                <h2>Continents</h2>
                 <ul type="square">
                     <a href=""><li>Africa</li></a>
                     <a href=""><li>Europe</li></a>
