--- a/js_2/t15/index.html
+++ b/js_2/t15/index.html
@@ -42,7 +42,6 @@
             <script src="https://unpkg.com/vue@next"></script>
             <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
             <link rel="stylesheet" href="styles/home.css">
-            <link rel="stylesheet" href="styles/404.css">
         </head>
         <body>
             <div class="container">
@@ -68,6 +67,7 @@
             </div>
 
             <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-app.js"></script>
+            <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-auth.js"></script>
             <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-firestore.js"></script>
             <script>
                 const firebaseConfig = {
@@ -83,6 +83,8 @@
                 firebase.initializeApp(firebaseConfig);
         
                 var db = firebase.firestore();
+        
+                var provider = new firebase.auth.GoogleAuthProvider();
             </script>
             <script src="main.js"></script>
         </body>
