--- a/js_2/t15/index.html
+++ b/js_2/t15/index.html
@@ -226,5 +226,13 @@
             } 
         </script>
     </xmp>
+    <p>Приклад кнопки:</p>
+    <h3 align="center">
+        <img src="6.png"  alt="" >
+    </h3>
+    <p>Google svg:</p>
+    <h3 align="center">
+        <img src="google_logo.svg"  alt="" >
+    </h3
 </body>
 </html>
