--- a/js_2/t15/done/index.html
+++ b/js_2/t15/done/index.html
@@ -39,8 +39,15 @@
                     </div>
                 </div>
             </nav>
-            <button @click="googleAuth">googleAuth</button>
-
+            <div class="row">
+                <div class="col-md-12 d-flex justify-content-center mt-5" > 
+                    <button class="btn btn-lg btn-light d-flex align-items-center" @click="googleAuth" 
+                        style="box-shadow: 0 0 5px rgba(0,0,0,0.5);">
+                        <img src="../google_logo.svg" style="margin-right: 10px;"> 
+                        Continue with Google
+                    </button>
+                </div>
+            </div>
             <component :is="currentView" />
         </div>        
     </div>
