--- a/js_2/kursach3/index.html
+++ b/js_2/kursach3/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@next"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="styles/home.css">
-    <link rel="stylesheet" href="styles/404.css">
+    <link rel="stylesheet" href="styles/login.css">
 </head>
 <body>
     <div class="container">
@@ -26,33 +28,16 @@
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#/">Home</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#/products">Products</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#/orders">Orders</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#/not-found">Not Found</a>
-                            </li>
                         </ul>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="#/login">Login</a>
+                                <a class="nav-link active" aria-current="page" href="#/login">Login</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
-            <div class="row">
-                <div class="col-md-12 d-flex justify-content-center mt-5" > 
-                    <button class="btn btn-lg btn-light d-flex align-items-center" @click="googleAuth" 
-                        style="box-shadow: 0 0 5px rgba(0,0,0,0.5);">
-                        <img src="../google_logo.svg" style="margin-right: 10px;"> 
-                        Continue with Google
-                    </button>
-                </div>
-            </div>
+
             <component :is="currentView" />
         </div>        
     </div>
