--- a/js_2/kursach3/index.html
+++ b/js_2/kursach3/index.html
@@ -31,7 +31,7 @@
                         </ul>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#/login">Login</a>
+                                <a class="nav-link active" aria-current="page" href="#/login">Log out</a>
                             </li>
                         </ul>
                     </div>
