--- a/js_2/kursach3/index.html
+++ b/js_2/kursach3/index.html
@@ -20,7 +20,9 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">Navbar</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <button 
+                        class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
@@ -31,18 +33,8 @@
                         </ul>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a 
-                                    v-if="!logged" 
-                                    class="nav-link active" 
-                                    aria-current="page" 
-                                    href="#/login"
-                                >Login</a>
-                                <a 
-                                    v-if="logged" 
-                                    class="nav-link active"
-                                    href="#/login"
-                                    @click="logOut"
-                                >Log out</a>
+                                <a v-if="!logged" class="nav-link active" aria-current="page" href="#/login">Login</a>
+                                <a v-if="logged" class="nav-link active" href="#/login" @click="logOut">Log out</a>
                             </li>
                         </ul>
                     </div>
