--- a/js_2/kursach3/index.html
+++ b/js_2/kursach3/index.html
@@ -13,6 +13,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/login.css">
+    <link rel="stylesheet" href="styles/addProduct.css">
 </head>
 <body>
     <div class="container">
@@ -28,20 +29,28 @@
                     <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#/">Home</a>
+                                <a class="nav-link" aria-current="page" href="#/">Home</a>
+                            </li>
+                            <li class="nav-item" v-if="admin">
+                                <a class="nav-link" aria-current="page" href="#/addproduct">Add product</a>
                             </li>
                         </ul>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a v-if="!logged" class="nav-link active" aria-current="page" href="#/login">Login</a>
-                                <a v-if="logged" class="nav-link active" href="#/login" @click="logOut">Log out</a>
+                                <a v-if="!logged" class="nav-link active" 
+                                aria-current="page" href="#/login"
+                            >Login</a>
+                                <a v-if="logged" class="nav-link active" 
+                                href="#/login" @click="logOut"
+                            >Log out</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
 
-            <component :is="currentView" :signIn="false"/>
+            <component :is="currentView" v-bind="newProduct"/>
+            
         </div>        
     </div>
 
