--- a/js_2/t19/index.html
+++ b/js_2/t19/index.html
@@ -31,27 +31,8 @@
         <img src="1.png"  alt="" >
     </h3>
 
-    <h3>2. Додайте редагування за допомогою модального вікна.</h3>
+    <h3>2. Додайте редагування за допомогою <a href="https://getbootstrap.com/docs/5.0/components/modal/">модального вікна</a>.</h3>
 
-    <xmp>
-        <div class="modal fade" id="editProductModal" tabindex="-1" aria-labelledby="editProductModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="editProductModalLabel">Modal title</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                  <div class="mb-3 mt-4">
-                    <label class="form-label">Product name</label>
-                    <input type="text" class="form-control" placeholder="">
-                  </div>
-
-                  <!--Price and Image inputs-->
-              </div>
-            </div>
-          </div>
-    </xmp>
 
     <h3>3. Оновіть товар у firebase.</h3>
 
