--- a/html-css/t30/plan_1.html
+++ b/html-css/t30/plan_1.html
@@ -21,40 +21,29 @@
         </div>
     </header>
 
-    <section class="landing">
-        <div class="landing__content">
-            <h1>awesome hosting</h1>
-            <h3>width unlimites features</h3>
+    <div class="plan">
+        <div class="plan_details">
+            <ul>
+                <li>10GB Disk Space</li>
+                <li>1TB Bandwith</li>
+                <li>Free DDos Protection</li>
+                <li>Free Daily Backups</li>
+                <li>Managed Hosting</li>
+            </ul>
         </div>
-    </section>
+        <div class="plan_name">
+            <p>$5</p>
+            <h1>Base plan</h1>
+        </div>
+    </div>
 
-    <section class="search">
-        <div class="search__content">
-            <div class="search__logo">search your<br>domain</div>
-            <div class="search__name">
-                <input type="text" placeholder="Enter your donain name">
-            </div>
-            <div class="search__year">
-                <select name="" id="">
-                    <option value="">Year (0-1)</option>
-                    <option value="">Year (1-2)</option>
-                    <option value="">Year (2-5)</option>
-                </select>
-            </div>
-            <div class="search__host">
-                <select name="" id="">
-                    <option value="">.com</option>
-                    <option value="">.net</option>
-                    <option value="">.org</option>
-                </select>
-            </div>
-            <div class="search__button">
-                <a href="button">Submit</a>
-            </div>
-        </div>
-    </section>
+    <div class="buy">
+        <p>TRY IT NOW</p>
+        <a href="#">PURCHASE</a>
+    </div>
 
     <section class="hosting">
+        <h2 align="center">Other plans</h2>
         <div class="hosting__content">
             <div class="hosting__box">
                 <h1>$5</h1>
