--- a/js_2/kursach3/index.html
+++ b/js_2/kursach3/index.html
@@ -32,6 +32,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="#/">Home</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#/products">Products</a>
+                            </li>
                             <li class="nav-item" v-if="admin">
                                 <a class="nav-link" aria-current="page" href="#/addproduct">Add product</a>
                             </li>
@@ -41,10 +44,17 @@
                         </ul>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a v-if="!logged" class="nav-link active" 
+                                <a v-if="logged" class="nav-link" 
+                                    aria-current="page" href="#/cart"
+                                >Cart ({{cart.length}})</a>
+                            </li>
+                            <li class="nav-item">
+                                <a v-if="!logged" class="nav-link" 
                                 aria-current="page" href="#/login"
-                            >Login</a>
-                                <a v-if="logged" class="nav-link active" 
+                                >Login</a>
+                            </li>
+                            <li>
+                                <a v-if="logged" class="nav-link" 
                                 href="#/login" @click="logOut"
                             >Log out</a>
                             </li>
@@ -58,9 +68,9 @@
         </div>        
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
     <script>
         const firebaseConfig = {
             apiKey: "AIzaSyA7KHlFAo8Qja8q9JjawiRmjbTfULRbg7U",
