--- a/js_2/t22/index.html
+++ b/js_2/t22/index.html
@@ -25,7 +25,7 @@
 <body>
     <h1>Курсова робота. Опрацювання замовлення.</h1>
 
-    <h3>1. Вираховуйте загальну вартість вт+ибоаних товарів перед підтвердженням замовлення. Додайте можливість змінювати кількість вибраних товарів.</h3>
+    <h3>1. Вираховуйте загальну вартість вибраних товарів перед підтвердженням замовлення. Додайте можливість змінювати кількість вибраних товарів.</h3>
 
     <h3 align="center">
         <img src="1.gif"  alt="" >
