--- a/js_2/t22/index.html
+++ b/js_2/t22/index.html
@@ -42,5 +42,9 @@
     <h3 align="center">
         <img src="3.png"  alt="" >
     </h3>
+
+    <h3 align="center">
+        <img src="4.png"  alt="" >
+    </h3>
 </body>
 </html>
