--- a/js_2/kursach3/index.html
+++ b/js_2/kursach3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EnterShoop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/login.css">
     <link rel="stylesheet" href="styles/addProduct.css">
     <link rel="stylesheet" href="styles/productCard.css">
+    <link rel="shortcut icon" href="https://study-link-v2.web.app/logo192.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
@@ -49,6 +50,16 @@
                                 >Cart ({{cart.length}})</a>
                             </li>
                             <li class="nav-item">
+                                <a v-if="logged && !admin" class="nav-link" 
+                                    aria-current="page" href="#/my-orders"
+                                >My orders</a>
+                            </li>
+                            <li class="nav-item">
+                                <a v-if="logged && admin" class="nav-link" 
+                                    aria-current="page" href="#/orders-admin"
+                                >All orders</a>
+                            </li>
+                            <li class="nav-item">
                                 <a v-if="!logged" class="nav-link" 
                                 aria-current="page" href="#/login"
                                 >Login</a>
@@ -56,7 +67,7 @@
                             <li>
                                 <a v-if="logged" class="nav-link" 
                                 href="#/login" @click="logOut"
-                            >Log out</a>
+                                >Log out</a>
                             </li>
                         </ul>
                     </div>
