--- a/js_2/kursach3/index.html
+++ b/js_2/kursach3/index.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="styles/addProduct.css">
     <link rel="stylesheet" href="styles/productCard.css">
     <link rel="shortcut icon" href="https://study-link-v2.web.app/logo192.png" type="image/x-icon">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <div class="container">
@@ -76,7 +80,43 @@
 
             <component :is="currentView" v-bind="newProduct"/>
             
-        </div>        
+        </div>   
+        
+        <footer>
+            <div class="footer_rights">
+                <h2>Marik Design, Inc</h2>
+                <p>
+                    ©2022 Lviv. All rights reserved. <br>
+                    Designed by Marian Kosaniak
+                </p>
+            </div>
+
+            <div class="footer_contacts">
+                <p>lalalaala@gmail.com</p>
+                <p>+380*******</p>
+            </div>
+
+            <div class="footer_menu">
+                <div class="menu_box">
+                    <a href="#">Projects</a>
+                    <a href="#">About</a>
+                    <a href="#">Srvices</a>
+                    <a href="#">Carreer</a>
+                </div>
+                <div class="menu_box">
+                    <a href="#">Mews</a>
+                    <a href="#"> Events</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Legals</a>
+                </div>
+                <div class="menu_box">
+                    <a href="#">Facebook</a>
+                    <a href="#">Twitter</a>
+                    <a href="#">Instagram</a>
+                    <a href="#">Dribbble</a>
+                </div>
+            </div>
+        </footer>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
