--- a/js_2/kursach3/index.html
+++ b/js_2/kursach3/index.html
@@ -15,11 +15,11 @@
     <link rel="stylesheet" href="styles/login.css">
     <link rel="stylesheet" href="styles/addProduct.css">
     <link rel="stylesheet" href="styles/productCard.css">
+    <link rel="stylesheet" href="styles/animate.css">
     <link rel="shortcut icon" href="https://study-link-v2.web.app/logo192.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <div class="container">
@@ -138,7 +138,11 @@
         var db = firebase.firestore();
 
         var provider = new firebase.auth.GoogleAuthProvider();
-    </script>
+    </script> 
+    <script src="js/wow.min.js"></script>
     <script src="main.js"></script>
+    <script>           
+        new WOW().init();
+    </script>
 </body>
 </html>
