--- a/js_2/t1/done/index.html
+++ b/js_2/t1/done/index.html
@@ -10,7 +10,10 @@
     <h1>Test</h1>
     <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-firestore.js"></script>
+
     <script>
+        //увесь код у цьому скрипті перенести у інший файл і підключити його. Для завдання 4.
+        //Start
         const firebaseConfig = {
             apiKey: "...",
             authDomain: "...",
@@ -24,6 +27,8 @@
         firebase.initializeApp(firebaseConfig);
 
         var db = firebase.firestore();
+        //Тепер до бази можна звертатись по змінній - db
+        //End
       </script>
 
       <script>
