--- a/js_2/t2/done/index.html
+++ b/js_2/t2/done/index.html
@@ -13,9 +13,9 @@
 
     <div id="list"></div>
 
-    <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-firestore.js"></script>
-    <script src="../firebase/index.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="../../firebase/index.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
