--- a/js_2/t4/done/index.html
+++ b/js_2/t4/done/index.html
@@ -11,7 +11,7 @@
 <body>
     <h2 class="text-center my-4">Users list</h2>
     <div class="container">
-    <table class="table">
+      <table class="table">
         <thead>
           <tr>
             <th scope="col">#</th>
@@ -23,7 +23,7 @@
             <th scope="col"></th>
           </tr>
         </thead>
-        <tbody>
+        <tbody id="table_body" >
           <tr id="cNQvTgRNGcOxTzpnP6r2">
             <th scope="row">1</th>
             <td>Mark</td>
