add fixes to t6

--- a/js_2/t6/index.html
+++ b/js_2/t6/index.html
@@ -24,8 +24,31 @@
 </head>
 <body>
     <h1>Практикування редагування документів у базі данних. (Приклад додавання коментарів до статті)</h1>
+    <p>
+        Завдання розраховане на 2 заняття. У результаті потрібно створити 3 сторінки <b>login.html</b>, <b>index.html</b>, <b>article.html</b>. Користувач повинен:
+        <ol>
+            <li>Aвторизуватись на сайті (login.html)</li>
+            <li>Побачити список усіх статтей який міститеме посилання на сторінки із статтями (index.html)</li>
+            <li>По кліку переходити на нову стоірку із статтею (article.html)</li>
+        </ol>
+    </b>
+    <br><br>
 
-    <h3>1. Додайте логінізацію на вашу сторінку. Та зберігайте користувача у localStorage</h3>
+    <h3>1. Додайте логінізацію на вашу сторінку (login.html). </h3>
+    <p>
+        <ol>
+            <li>Створіть фукцію яка прийматиме логін та пароль користувача <b>login(email, password){..}</b></li>
+            <li>У цій функції спробуйте знайти користувача у базі данних за вказаним логіном (email)</li>
+            <li>Якщо такий користувач існує перевірте чи збігається його пароль.</li>
+            <li>Якщо пароль вірний то зберігайте користувача у localStorage та відправляйте його на сторінку <b>index.html</b></li>
+            <li>Створіть функцію яка перевірятиме чи є у localStorage збережений користувач <b>checkUser(){...}</b>.</li>
+            <li>Якщо користувач збережений у localStorage то відправляйте користувача із стоірнки login.html на сторінку зі писком статтей (index.html).</li>
+        </ol>
+    </p>
+    
+    <h3 align="center">
+        <img src="0.png"  alt="" >
+    </h3>
 
     <h3>2. Додайте спиок статтей які є у вашій базі данних у колекції <b>articles</b>. Список відображатиме лише назву статті та її id. По кліку на назву статті витягуйте з бази додаткову інформацію про статтю (текст статті, кількість переглядів та кількість коментарів).</h3>
     
