--- a/js_2/t7/index.html
+++ b/js_2/t7/index.html
@@ -31,18 +31,17 @@
         2. Створіть у класі методи які будуть <br><br>
         <span style="padding-left: 20px;"> 
             1) Виводити повну назву телефону яка включатиме: назув товару, виробника та колір.<br></span> 
-            <span style="padding-left: 20px;">   2) Виводити швидкість зарядки телефону за фомулою 38mAh за хв. (Формулу можна ускладнити за бажанням)  <br></span> 
-            <span style="padding-left: 20px;">   3) Виводити вартість телефону у росстрочку на 4, 6, 12 місяців. (4%, 6%, 10%)</span> 
+            <span style="padding-left: 20px;">   3) Виводити вартість телефону у росстрочку на 4, 6, 12 місяців. (4%, 5%, 6%)</span> 
     </h3>
 
     <h3>4. Додайте на сторінку форму для введення усіх параметрів про телефон.</h3>
 
     <h3 align="center">
-        <img src="1.png"  alt="" >
+        <img src="1.png" width="600px"  alt="" >
     </h3>
 
     <h3>5. Створіть масив з створених за допомогою класу <b>Phone</b> та пареметрів з форми об'єктів.</h3>
 
-    <h3>6. Виведіть таблицю з створних обєктів та додайте для кожного методу кнопу яка виводитиме відповідну інфрмацію про телефон за допомогою <b>alert()</b>.</h3>
+    <h3>6. Виведіть таблицю з створних об'єктів та додайте для кожного методу кнопу яка виводитиме відповідну інфрмацію про телефон за допомогою <b>alert()</b>.</h3>
 </body>
 </html>
