--- a/js_2/t8/done/index.html
+++ b/js_2/t8/done/index.html
@@ -48,6 +48,12 @@
      
      <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-app.js"></script>
      <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-firestore.js"></script>
+    
+     <!--Підключення firebase окремим файлом або-->
+     <script src="../../firebase/index.js"></script>
+
+      <!--Підключення firebase в index-->
+     <!--
      <script>
          const firebaseConfig = {
              apiKey: "...",
@@ -63,7 +69,7 @@
  
          var db = firebase.firestore();
        </script>
-
+    -->
      <script src="main.js"></script>
 </body>
 </html>
