--- a/js_2/t8/index.html
+++ b/js_2/t8/index.html
@@ -19,18 +19,30 @@
         xmp{ 
             background: lightyellow;
         }
+        p{
+            font-size: 16px;
+            padding-left: 20px;
+        }
     </style>
     <link rel="icon" href="../Untitled.png">
 </head>
 <body>
     <h1>Практичне використання класів у JavaScript</h1>
 
-    <h3>1. Створіть клас <b>Order</b> який буде формувати замовення. Замовлення матиме такі поля: <b>product_name, product_price, user_email, count (кільіксть товарів), delivery (додайте випадаючий список з можливих доставок), submitted (за замовчуванням false)</b>.</h3>
+    <h3>1. Створіть клас <b>Order</b> який буде формувати замовення. Замовлення матиме такі поля: <br>
+        <b>product_name, </b>
+        <br> <b>product_price, </b>
+        <br><b>user_email, </b>
+        <br><b>count (кільіксть товарів), </b>
+        <br><b>delivery</b> (додайте випадаючий список з можливих доставок), 
+        <br><b>submitted </b>(за замовчуванням false), 
+        <br><b>total_price </b>(вирахоується за формулою).
+    </h3>
 
     <h3>2. Створіть сторінку з формою яка буде опрацьовувати створення замовлення</b>.</h3>
 
     <h3 align="center">
-        <img src="1.png"  alt="" >
+        <img src="1.png" width="500px" alt="" >
     </h3>
 
     <xmp>
@@ -106,10 +118,14 @@
     </xmp>
     <h3>
         3. Створіть у класі Order методи які будуть <br><br>
-        <span style="padding-left: 20px;"> 
-        1) Формувати загальну ціну (враховуючи кількість товарів та доставку).<br></span> 
-        <span style="padding-left: 20px;">   
-        2) Зберігати замовлення у базі данних в колекції <b>orders</b><br></span>
+            <p> 1) Метод <b>getTotalPrice()</b> Формувати загальну ціну замолення. Враховуйте кількість товарів та доставку. <br></p>
+            <p> У методі перевіряйте назву доставки і з залежності від цього формуйте ціну. <br></p>
+            <p> 
+                Наприклад:<br>
+                Нова Пошта - 70грн<br>
+                Укр Пошта  - 60грн.<br><br> 
+            </p>
+            <p>2) Метод <b>saveOrder()</b> який буде зберігати замовлення у базі данних в колекції <b>orders</b></p>
     </h3>
 
     <h3>4. Створіть сторінку з таблицею усіх замовлень (доступною для адміна).</h3>
@@ -118,12 +134,9 @@
 
     <h3>
         6. Створіть у класі Admin методи які будуть <br><br>
-        <span style="padding-left: 20px;"> 
-        1) Підтверджувати замовлення (у полі замовлення submitted зміювати на true).<br></span> 
-        <span style="padding-left: 20px;">   
-        2) Генеруватиме посилання на нову сторінку яка показуватиме замовнику інформацію про підтверджене замовлення. <br></span>
-        <span style="padding-left: 20px;">   
-        3) Генеруватиме посилання для відправки email замовнику.</span>
+        <p>1) Підтверджувати замовлення (у полі замовлення submitted зміювати на true).</p> 
+        <p>2) Генеруватиме посилання на нову сторінку яка показуватиме замовнику інформацію про підтверджене замовлення.</p>
+        <p>3) Генеруватиме посилання для відправки email замовнику.</p>
         <br>
         <xmp>
             //Приклад посилання:
