fix types for input

--- a/js_2/t7/done/index.html
+++ b/js_2/t7/done/index.html
@@ -16,9 +16,9 @@
                     <input class="form-control form-control-sm mb-3" type="text" id="name" placeholder="Name">
                     <input class="form-control form-control-sm mb-3" type="text" id="company" placeholder="Company">
                     <input class="form-control form-control-sm mb-3" type="text" id="operating_system" placeholder="Operating system">
-                    <input class="form-control form-control-sm mb-3" type="text" id="screen" placeholder="Screen">
-                    <input class="form-control form-control-sm mb-3" type="text" id="price" placeholder="Price">
-                    <input class="form-control form-control-sm mb-3" type="text" id="battery" placeholder="Battery">
+                    <input class="form-control form-control-sm mb-3" type="number" id="screen" placeholder="Screen">
+                    <input class="form-control form-control-sm mb-3" type="number" id="price" placeholder="Price">
+                    <input class="form-control form-control-sm mb-3" type="number" id="battery" placeholder="Battery">
                     <input class="form-control form-control-sm mb-3" type="text" id="color" placeholder="Colour">
 
                     <button class="btn btn-sm btn-primary" onclick="addNewPhone()">Add phone</button>
