--- a/js_2/t8/done/index.html
+++ b/js_2/t8/done/index.html
@@ -33,7 +33,7 @@
                     <label class="form-label">Delivery</label>
                     <input class="form-control" list="datalistOptions" id="delivery" placeholder="Delivery...">
                          <datalist id="datalistOptions">
-                         <option value="Новапошта">
+                         <option value="Нова Пошта">
                          <option value="Укр пошта">
                          <option value="Кур'єр">
                     </datalist>
