--- a/js_2/t8/index.html
+++ b/js_2/t8/index.html
@@ -128,7 +128,7 @@
             <p>2) Метод <b>saveOrder()</b> який буде зберігати замовлення у базі данних в колекції <b>orders</b></p>
     </h3>
 
-    <h3>4. Створіть сторінку з таблицею усіх замовлень (доступною для адміна).</h3>
+    <h3>4. Створіть сторінку з таблицею усіх замовлень.</h3>
 
     <h3>5. Створіть клас <b>Admin</b> який буде опрацьовувати замовення. </h3>
 
@@ -143,7 +143,8 @@
             <a href="mailto:test@gmail.com?subject=Order%20submited&body=Test%20body.%0AWith%20many%20text.">link</a>
         </xmp>
     </h3>
-
+<!--
     <h3>6. У клас <b>Order</b> додайте метод <b>render()</b> який буде відображати замовлення для користувача на новій сторінці <b>order.html</b>. </h3>
+-->
 </body>
 </html>
