--- a/js_2/t8/done/index.html
+++ b/js_2/t8/done/index.html
@@ -12,7 +12,7 @@
         <h1 class="text-center my-5">New order</h1>
 
         <div class="row justify-content-center">
-          <div class="col-10 col-sm-6">
+          <div class="col-10 col-sm-12">
               <div class="mb-3">
                   <label class="form-label">User email</label>
                   <input type="email" class="form-control" id="user_email" placeholder="name@example.com">
@@ -27,7 +27,7 @@
               </div>
                <div class="mb-3">
                     <label class="form-label">Count</label>
-                    <input type="text" class="form-control" id="count">
+                    <input type="number" class="form-control" id="count">
                </div>
                <div class="mb-3">
                     <label class="form-label">Delivery</label>
