--- a/js_2/t8/index.html
+++ b/js_2/t8/index.html
@@ -129,7 +129,9 @@
     </h3>
 
     <h3>4. Створіть сторінку з таблицею усіх замовлень.</h3>
-
+    <h3 align="center">
+        <img src="2.png" width="100%" alt="" >
+    </h3>
     <h3>5. Створіть клас <b>Admin</b> який буде опрацьовувати замовення. </h3>
 
     <h3>
